My commit at 1810hrs 13th April 2021

--- a/dual_objectives.Rmd
+++ b/dual_objectives.Rmd
@@ -529,9 +529,9 @@ Commercial banks come second after NGOs in the proportion of MFIs that succeed b
 The observations in the visualization appear to validate the concerns by the welfare school of microfinance that, indeed, pursuing a financial return is incompatible with outreach to the financially excluded. Except for NBFIs that seem evenly spread between the different classes, the other commercial MFIs- banks, cooperatives, and rural banks, are biased against social outreach. NGOs show a high degree of social orientation, and are at the top when it comes to achievement of the twin objectives, and come last in the class of MFIs that succeed financially and fail socially. We shall revisit this issue in the regression analysis. Finally, for profit-oriented MFIs like commercial banks, financial performance is a pre-requisite for the achievement of social objectives. The result could be due to the lower proportion of donations and subsidies that for-profit MFIs receive [@d2013unsubsidized] which forces to focus on financial sustainability. Only after they achieve some degree of financial sustainability do they turn their attention to the achievement of social goals. The next section summarises the independent variables. 
 
 ### Data visualization
-Figure 3 shows the correlation between the numeric independent variables. The highest correlation is between private credit to GDP and stock market capitalization to GDP at 0.321. Institutional quality and private credit to GDP follow at -0.265. Overall the correlation between independent variables is not high to raise multicollinearity issues (See the Table 14 on variance inflation factors, VIF). Further, Figure () shows that smaller MFIs tend to fail financially while the bigger ones succeed. Socially, the smallest MFIs tend to succeed, while larger ones exhibit mixed results. Panel B shows that MFIs in countries with stronger institutional quality and, hence, higher incomes tend to fail socially unlike their counterparts in countries with lower institutional quality. As noted, higher institutional quality lowers demand for microfinance as many people have access to the mainstream financial system. However, MFIs in countries with the weakest institutional quality tend to fail financially while those in jurisdictions with the highest institutional quality succeed. The result show the costs of serving financially excluded markets which make it hard to turn a financial return. It is therefore important to examine the circumstances in individual countries before prescribing or discouraging the conversion of MFIs. In relatively well off countries, the conversion of MFIs could be feasible. In very poor countries where financial exclusion is high, the conversion may fail as MFIs cannot make enough to sustain the extension of financial services to the many financially excluded people. 
+Figure 3 shows the correlation between the numeric independent variables. The highest correlation is between private credit to GDP and stock market capitalization to GDP at 0.321. Institutional quality and private credit to GDP follow at -0.265. Overall the correlation between independent variables is not high to raise multicollinearity issues (See the Table 14 on variance inflation factors, VIF). Further, Figure 4 shows that smaller MFIs tend to fail financially while the bigger ones succeed. Socially, the smallest MFIs tend to succeed, while larger ones exhibit mixed results. Overall, larger MFIs show greater evidence of mission drift. Panel B shows that MFIs in countries with stronger institutional quality and, hence, higher incomes tend to fail socially unlike their counterparts in countries with lower institutional quality. As noted, higher institutional quality lowers demand for microfinance as many people have access to the mainstream financial system [@allen2014african; @allen2013resolving]. However, MFIs in countries with the weakest institutional quality tend to fail financially while those in jurisdictions with the highest institutional quality succeed. The result show the costs of serving financially excluded markets which make it hard to turn a financial return. It is therefore important to examine the circumstances in individual countries before prescribing or discouraging the conversion of MFIs. In relatively well off countries, the conversion of MFIs could be feasible. In very poor countries where financial exclusion is high, the conversion may fail as MFIs cannot make enough to sustain the extension of financial services to the many financially excluded people. 
 
-As with institutional quality, MFIs in countries with high private credit to GDP which imply better banking sector development and wealth, have a higher chance of failing socially. With financial inclusion, there is low demand for microfinance in these countries. The opposite is true for MFIs in countries with low private sector credit to GDP. The link between financial performance of MFIs and private credit shows mixed results with MFIs in countries with the highest and lowest private credit tending to fail financially. Stock market development shows a trend opposite to that of private credit to GDP, with MFIs in countries with high levels of stock market development tending to succeed socially. The link between the financial performance of MFIs and stock market development is also mixed. The results may indicate the weak linkage between the stock markets and the financial needs of the financially excluded at the base of the income pyramid. Overall, the visualizations shows that the choice of independent variables may be relevant in explaining the degree of joint financial and social performance of MFIs in Africa. 
+As with institutional quality, MFIs in countries with high private credit to GDP which imply better banking sector development and wealth, have a higher chance of failing socially. With financial inclusion, there is low demand for microfinance in these countries [@huang2010political]. The opposite is true for MFIs in countries with low private sector credit to GDP. The link between financial performance of MFIs and private credit shows mixed results with MFIs in countries with the highest and lowest private credit tending to fail financially. Stock market development shows a trend opposite to that of private credit to GDP, with MFIs in countries with high levels of stock market development tending to succeed socially. The link between the financial performance of MFIs and stock market development is also mixed. The results may indicate the weak linkage between the stock markets and the financial needs of the financially excluded at the base of the income pyramid. Overall, the visualizations shows that the choice of independent variables may be relevant in explaining the degree of joint financial and social performance of MFIs in Africa. 
 
 
 
@@ -838,7 +838,7 @@ library(wesanderson)  # for nice colours
 ```
 
 
-
+\blandscape
 
 ```{r, fig.cap="Correlation between Independent Variables", fig.width = 8, fig.height = 5}
 my_data %>% 
@@ -851,9 +851,13 @@ my_data %>%
 ```
 
 
+\elandscape
+
+
+
 \blandscape
 
-```{r, fig.width = 8, fig.height = 5}
+```{r, fig.width = 8, fig.height = 5, fig.cap = "Financial and Social Performance of MFIs by Size, Governance and Capital Mrkets Development"}
 (second_plotter(data = my_data, x = fct_reorder(finsoc, assets, median), y = assets, z = finsoc, xlabel = "Financial and Social Performance", ylabel = "Assets (size of MFI)", title = "Size and Perfomance of MFIs in Africa") +
 
 second_plotter(data = my_data, x = fct_reorder(finsoc, kkm, median), y = kkm, z = finsoc, xlabel = "Financial and Social Performance", ylabel = "Governance (Institutional Quality)", title = "Perfomance of MFIs in Africa and Governance")) / 
@@ -891,7 +895,7 @@ my_data %>%
       
   booktabs = TRUE) %>% 
   
-  kable_paper(full_width = TRUE) %>% 
+  kable_paper(full_width = TRUE, font_size = 9) %>% 
   
   footnote(general = "Authors' construction from MIX data",
            
@@ -906,7 +910,7 @@ my_data %>%
 The results of the regression model are in tables 7 through 9. Given that we have an unbalanced dataset, we run the regressions separately for the entire data (Table 7), for MFIs with three or more years of data (Table 8), and for those with 5 or more years of data (Table 9). Overall, the significant drivers of the achievement of the dual objectives are age, size, stock market capitalization to GDP, private credit to GDP, institutional quality, legal tradition, and MFI legal status. The GDP growth rate is not a significant driver of the extent which MFIs meet both financial and social objectives. The latter two regressions form a robustness check. We discuss each of the variables basing on Table 7 but referring to Tables 8 and 9 for comparison. 
 
 ### Age
-\noindent Age is a categorical variable. New MFIs (that have existed for 0 - 4 years) are the base outcome. The results show that relative to new MFIs, young MFIs (4 -8 years) are less likely to succeed financially and fail socially than failing to meet the dual objectives. Similarly, compared to new MFIs, young MFIs are less likely to fail financially and succeed in meeting their social goals than they are to fail to meet the twin objectives. However, young MFIs they are more likely than new MFIs to meet both their financial and social goals than to fail in the dual mission. The results imply that young MFIs are more prone to both financial and social failure compared to new MFIs. Put another way, compared to new MFIs, young MFIs are more likely to fail to achieve both financial and social goals than they are to achieve social goals and failing financially and vice versa, and succeeding both financially and socially. However, these relationships are not significant.
+\noindent Age is a categorical variable. New MFIs (that have existed for 0 - 4 years) are the base outcome. The results show that relative to new MFIs, young MFIs (4 -8 years) are less likely to succeed financially and fail socially than failing to meet the dual objectives. Put another way, young MFIs are more likely to experience both financial and social failure than they are to succeed financially and fail socially relative to new MFIs. Similarly, compared to new MFIs, young MFIs are less likely to fail financially and succeed in meeting their social goals than they are to fail to meet the twin objectives. However, young MFIs they are more likely than new MFIs to meet both their financial and social goals than to fail in the dual mission. The results imply that young MFIs are more prone to both financial and social failure compared to new MFIs. In other words, compared to new MFIs, young MFIs are more likely to fail to achieve both financial and social goals than they are to achieve social goals and failing financially and vice versa, and succeeding both financially and socially. However, these relationships are not significant. Age is important given that newer MFIs have fewer resources and hence more reliant on donations. Also, newer smaller firms have difficulties accessing finance [@beck2008finance]. Thus, age makes newer MFIs more prone to both financial and social failure and more prone to mission drift than established MFIs [@d2017ngos]. 
 
 ```{r}
 prop.table(table(my_data$age, my_data$finsoc), 1) %>% 
@@ -965,11 +969,10 @@ prop.table(table(my_data$legal_tradition, my_data$finsoc), 1) %>%
 ```
 
 
-
 ### MFI legal status
 For legal status, the NGO model is the base outcome. Compared to NGOs, commercial banks are more likely to succeed financially while failing socially than they are to fail in both objectives. The results shows that the commercial banking model of microfinance is likely to put profits before outreach to the financially excluded. Similarly, commercial banks less likely than NGOs to fail financially while succeeding socially than they are to fail in both objectives. The result may highlight that for commercial banks to succeed socially, they have to be financially self-sustainable, without which they tend to fail in both objectives. Likewise, relative to NGOs, commercial banks are less likely to achieve both financial and social goals than they are to fail in both goals. Again this shows the importance of financial success in determining the attainment of social goals by commercial banks as compared to NGOs. 
 
-The other MFI legal forms- NBFIs, cooperatives, and rural banks show a pattern similar to that of commercial banks. Overall, the results confirm the results of exploratory data analysis that shows that NGOs are less prone to social failure compared to the commercial forms of MFIs. The result confirms the concerns by the welfare school that the transformation of MFIs is likely to cause mission drift [@d2017ngos]. Also, it implies that for commercial MFIs to prioritize social goals, they ought first to realize financial success which may be hard to come by unless with some form of support from the state and donors, at least in the initial stages of transformation. 
+The other MFI legal forms- NBFIs, cooperatives, and rural banks show a pattern similar to that of commercial banks. Overall, the results confirm the results of exploratory data analysis that shows that NGOs are less prone to social failure compared to the commercial forms of MFIs [@jia2016commercialization; @mia2017mission]. The result confirms the concerns by the welfare school that the transformation of MFIs is likely to cause mission drift [@d2017ngos]. Also, it implies that for commercial MFIs to prioritize social goals, they ought first to realize financial success which may be hard to come by unless with some form of support from the state and donors, at least in the initial stages of transformation. 
 
 
 \newpage
