My final commit on 13th April, 2021

--- a/dual_objectives.Rmd
+++ b/dual_objectives.Rmd
@@ -524,9 +524,9 @@ We turn to NBFIs. NBFIs have the third highest proportion, after NGOs and comemr
 
 NGOs have the second highest instance of succeeding both financially and socially at 48.6% in the sample data, after rural banks. NGOs also have the highest proportion of MFIs that fail financially while succeeding financially (36.41%). Again, NGOs have the lowest chance of succeeding financially while failing socially at 36.4%. NGOs have the third lowest instance (7.3%) of failing both financially and socially after commercial banks (6.3%) and rural banks (0.7%). The results for NGOs illustrating their leaning towards the welfare school of prioritizing outreach over profitability. These results appear the concerns by the welfare school that the explicit pursuit of profits is incompatible with the extension of financial services to the financially excluded [@d2017ngos]. 
 
-Commercial banks come second after NGOs in the proportion of MFIs that succeed both financially and socially at 45.7%. However, after rural banks and cooperatives, commercial banks have the lowest chance of failing financially while succeeding socially. After rural banks and cooperatives, banks are the third least likely to succeed financially while failing to meet their social objectives. However, banks have the second lowest instance of failing to meet both objectives. lastly, though the sample of rural banks is small, they show the highest likelihood of succeeding both financially and socially and failing to achieve the twin objectives. Rural banks have the least instance of succeeding financially while failing socially, and have no instance of failing to meet both objectives. 
+Commercial banks come second after NGOs in the proportion of MFIs that succeed both financially and socially at 45.7%. However, after rural banks and cooperatives, commercial banks have the lowest chance of failing financially while succeeding socially. After rural banks and cooperatives, banks are the third least likely to succeed financially while failing to meet their social objectives. However, banks have the second lowest instance of failing to meet both objectives. lastly, though the sample of rural banks is small, they show the highest likelihood of succeeding both financially and socially and failing to achieve the twin objectives. Rural banks have the least instance of succeeding financially while failing socially, and have no instance of failing to meet both objectives. Given that rural banks specifically target the financially excluded in rural areas, it is rare that they would fail in their social mandate. 
 
-The observations in the visualization appear to validate the concerns by the welfare school of microfinance that, indeed, pursuing a financial return is incompatible with outreach to the financially excluded. Except for NBFIs that seem evenly spread between the different classes, the other commercial MFIs- banks, cooperatives, and rural banks, are biased against social outreach. NGOs show a high degree of social orientation, and are at the top when it comes to achievement of the twin objectives, and come last in the class of MFIs that succeed financially and fail socially. We shall revisit this issue in the regression analysis. Finally, for profit-oriented MFIs like commercial banks, financial performance is a pre-requisite for the achievement of social objectives. The result could be due to the lower proportion of donations and subsidies that for-profit MFIs receive [@d2013unsubsidized] which forces to focus on financial sustainability. Only after they achieve some degree of financial sustainability do they turn their attention to the achievement of social goals. The next section summarises the independent variables. 
+The observations in the visualization appear to validate the concerns by the welfare school of microfinance that, indeed, pursuing a financial return is incompatible with outreach to the financially excluded. Except for NBFIs that seem evenly spread between the different classes, the other commercial MFIs- banks, cooperatives, and rural banks, are biased against social outreach. NGOs show a high degree of social orientation, and are at the top when it comes to achievement of the twin objectives, and come last in the class of MFIs that succeed financially and fail socially. We shall revisit this issue in the regression analysis. Finally, for profit-oriented MFIs like commercial banks, financial performance is a pre-requisite for the achievement of social objectives. The result could be due to the lower proportion of donations and subsidies that for-profit MFIs receive [@d2013unsubsidized] which forces to focus on financial sustainability. Only after they achieve some degree of financial sustainability do they turn their attention to the achievement of social goals. We visualize the data in the next section. 
 
 ### Data visualization
 Figure 3 shows the correlation between the numeric independent variables. The highest correlation is between private credit to GDP and stock market capitalization to GDP at 0.321. Institutional quality and private credit to GDP follow at -0.265. Overall the correlation between independent variables is not high to raise multicollinearity issues (See the Table 14 on variance inflation factors, VIF). Further, Figure 4 shows that smaller MFIs tend to fail financially while the bigger ones succeed. Socially, the smallest MFIs tend to succeed, while larger ones exhibit mixed results. Overall, larger MFIs show greater evidence of mission drift. Panel B shows that MFIs in countries with stronger institutional quality and, hence, higher incomes tend to fail socially unlike their counterparts in countries with lower institutional quality. As noted, higher institutional quality lowers demand for microfinance as many people have access to the mainstream financial system [@allen2014african; @allen2013resolving]. However, MFIs in countries with the weakest institutional quality tend to fail financially while those in jurisdictions with the highest institutional quality succeed. The result show the costs of serving financially excluded markets which make it hard to turn a financial return. It is therefore important to examine the circumstances in individual countries before prescribing or discouraging the conversion of MFIs. In relatively well off countries, the conversion of MFIs could be feasible. In very poor countries where financial exclusion is high, the conversion may fail as MFIs cannot make enough to sustain the extension of financial services to the many financially excluded people. 
@@ -910,7 +910,7 @@ my_data %>%
 The results of the regression model are in tables 7 through 9. Given that we have an unbalanced dataset, we run the regressions separately for the entire data (Table 7), for MFIs with three or more years of data (Table 8), and for those with 5 or more years of data (Table 9). Overall, the significant drivers of the achievement of the dual objectives are age, size, stock market capitalization to GDP, private credit to GDP, institutional quality, legal tradition, and MFI legal status. The GDP growth rate is not a significant driver of the extent which MFIs meet both financial and social objectives. The latter two regressions form a robustness check. We discuss each of the variables basing on Table 7 but referring to Tables 8 and 9 for comparison. 
 
 ### Age
-\noindent Age is a categorical variable. New MFIs (that have existed for 0 - 4 years) are the base outcome. The results show that relative to new MFIs, young MFIs (4 -8 years) are less likely to succeed financially and fail socially than failing to meet the dual objectives. Put another way, young MFIs are more likely to experience both financial and social failure than they are to succeed financially and fail socially relative to new MFIs. Similarly, compared to new MFIs, young MFIs are less likely to fail financially and succeed in meeting their social goals than they are to fail to meet the twin objectives. However, young MFIs they are more likely than new MFIs to meet both their financial and social goals than to fail in the dual mission. The results imply that young MFIs are more prone to both financial and social failure compared to new MFIs. In other words, compared to new MFIs, young MFIs are more likely to fail to achieve both financial and social goals than they are to achieve social goals and failing financially and vice versa, and succeeding both financially and socially. However, these relationships are not significant. Age is important given that newer MFIs have fewer resources and hence more reliant on donations. Also, newer smaller firms have difficulties accessing finance [@beck2008finance]. Thus, age makes newer MFIs more prone to both financial and social failure and more prone to mission drift than established MFIs [@d2017ngos]. 
+\noindent Age is a categorical variable. New MFIs (that have existed for 0 - 4 years) are the base outcome. The results show that relative to new MFIs, young MFIs (4 -8 years) are less likely to succeed financially and fail socially than failing to meet the dual objectives. Put another way, young MFIs are more likely to experience both financial and social failure than they are to succeed financially and fail socially relative to new MFIs. Similarly, compared to new MFIs, young MFIs are less likely to fail financially and succeed in meeting their social goals than they are to fail to meet the twin objectives. However, young MFIs they are more likely than new MFIs to meet both their financial and social goals than to fail in the dual mission. The results imply that young MFIs are more prone to both financial and social failure compared to new MFIs. In other words, compared to new MFIs, young MFIs are more likely to fail to achieve both financial and social goals than they are to achieve social goals and failing financially and vice versa, and succeeding both financially and socially. However, these relationships are not significant. Age is important given that newer MFIs have fewer resources and hence more reliant on donations which are also uncertain [@armendariz2013subsidy; @d2013unsubsidized]. Also, newer smaller firms have difficulties accessing finance [@beck2008finance]. Thus, age makes newer MFIs more prone to both financial and social failure and more prone to mission drift than established MFIs [@d2017ngos]. 
 
 ```{r}
 prop.table(table(my_data$age, my_data$finsoc), 1) %>% 
@@ -929,9 +929,9 @@ prop.table(table(my_data$age, my_data$finsoc), 1) %>%
 
 On the other hand, the results show that relative to new MFIs, mature MFIs are significantly less likely to succeed financially and fail socially than they are to fail in meeting the dual objectives. Similarly mature MFIs are significantly less likely than new MFIs to fail financially while meeting their social goals than they are to meet both their goals. Both these results are significant. Also, the regression results show that relative to new MFIs, mature MFIs are less likely to meet the dual objectives than they are to fail in their twin mission. The latter result is not significant. These results illustrate that mature MFIs are more prone to failing in their twin mission than new MFIs. The results imply that as MFIs mature, they are less prone to mission drift. The observation hods given that in the regression older MFIs are more likely to fail to achieve both financial and social objectives than they are to succeed in one and fail in the other or succeed in both financial and social goals, compared to new MFIs.
 
-Indeed, Table () shows a higher proportion of mature MFIs that fail to attain both objectives compared to new and young MFIs. The table shows that a higher proportion of mature MFIs fail in both objectives. Likewise, a higher proportion of mature MFIs tend to succeed financially while failing socially, although, in the regression, the result is not significant. Financial success coupled with social failure is detrimental to financial inclusion and shows that mature MFIs may be less prone to mission drift when they convert to the commercial model. However, a higher proportion of mature MFIs fail financially while succeeding socially which is also an indicator of mission drift - one that shows that mature MFIs may place social performance over social goals. Lastly, although the result is not significant in the regression, the table shows that mature MFIs that succeed financially also tend to succeed socially. ^[Note that the interpretation of Table () differs from the interpretation of the regression. The regression examines the relative likelihood. For instance, how likely are mature MFIs, as compared to new MFIs, to succeed in both objectives than fail in both objectives. The Table gives absolute values.]
+Indeed, Table 3 shows a higher proportion of mature MFIs that fail to attain both objectives compared to new and young MFIs. The table shows that a higher proportion of mature MFIs fail in both objectives. Likewise, a higher proportion of mature MFIs tend to succeed financially while failing socially, although, in the regression, the result is not significant. Financial success coupled with social failure is detrimental to financial inclusion and shows that mature MFIs may be less prone to mission drift when they convert to the commercial model. However, a higher proportion of mature MFIs fail financially while succeeding socially which is also an indicator of mission drift - one that shows that mature MFIs may place social performance over social goals. Lastly, although the result is not significant in the regression, the table shows that mature MFIs that succeed financially also tend to succeed socially. ^[Note that the interpretation of Table 3 differs from the interpretation of the regression. The regression examines the relative likelihood. For instance, how likely are mature MFIs, as compared to new MFIs, to succeed in both objectives than fail in both objectives. The Table gives absolute values.]
 
-As noted, the results imply that mature MFIs are less prone to mission drift where success in one dimension (say, financial) accompanies failure in the other dimension (say social), and vice versa. However, when mature MFIs succeed financially they also tend to fare equally well socially. The result could hold given that mature MFIs have a larger asset base to draw from makes them able to reach out to the financially excluded with less dependence on donations and subsidies. The larger asset base also means that larger MFIs have established their presence through marketing campaigns and use of technology such that they have a bigger client base in wider geographic locations. In this case, it is much easier for mature MFIs to attain their social goals, given their greater market share that would allow them to operate even in remote areas with or without donors and state support. Newer MFIs on the other hand, have to legitimize their activities by ensuring that they meet their social goals. hence, even though mature MFIs receive more donations on aggregate, the relative share of donations is lower than that newer MFIs.   
+As noted, the results imply that mature MFIs are less prone to mission drift where success in one dimension (say, financial) accompanies failure in the other dimension (say social), and vice versa. However, when mature MFIs succeed financially they also tend to fare equally well socially. The result could hold given that mature MFIs have a larger asset base to draw from makes them able to reach out to the financially excluded with less dependence on donations and subsidies. The larger asset base also means that larger MFIs have established their presence through marketing campaigns and use of technology such that they have a bigger client base in wider geographic locations [@jia2016commercialization; ]. In this case, it is much easier for mature MFIs to attain their social goals, given their greater market share that would allow them to operate even in remote areas with or without donors and state support. Newer MFIs on the other hand, have to legitimize their activities by ensuring that they meet their social goals. hence, even though mature MFIs receive more donations on aggregate, the relative share of donations is lower than that newer MFIs.   
 
 ### Size
 As noted age and size move together. Mature MFIs have more assets on average than younger MFIs. The regression out put shows that larger MFIs are significantly more likely to succeed financially while failing socially than they are to fail in both objectives. Specifically, if the asset base (the proxy for size) of an MFI rises by one unit, then the MFI is 1.241102 times more likely to fall into the group that succeeds financially and fails socially than to be in the group that fails to meet the dual objectives. On the contrary, larger MFIs are marginally less likely to fail in meeting their financial goals while succeeding socially. Again, a one unit increase in size results in 0.9685066 likelihood of falling into the group of MFIs that fail financially while succeeding socially. With the odds almost equal to one, it appears size is not as important in determining whether or not an MFI fails financially and succeeds socially. Indeed, this outcome is not statistically significant. However, larger MFIs are significantly more likely to meet their dual objectives than to fail in both. In this case, a one unit increase in MFI size corresponds to 1.192438 odds of achieving both objectives relative to failing in both objectives ^[We exponentiate the coefficients to get the odds. Odds greater than one indicate greater likelihood. Odds less than one indicate less likelihood, while one indicates equal likelihood.]. 
@@ -1156,12 +1156,7 @@ car::vif(full) %>%
 
 ## Conclusion
 
-
-
-
-
-## References
-
+This article examines the extent that MFIs in Africa achieve their dual objectives - financial and social goals. Although most MFIs tend to succeed both financially and socially, a substantial number also fails in both objectives. In between, there is an even split between MFIs that achieve one objective and fail in the other. The factors that drive the extent to which MFIs achieve joint financial and social goals include age, size, and legal status of the MFI, and country level indicators like stock market capitalization, and institutional quality. 
 
 
 \blandscape
@@ -1205,3 +1200,5 @@ stargazer(my_model, title = "Regression Results - Multinomial Logit Model- Full 
           font.size = "footnotesize", header = FALSE, omit = "year.")
 ```
 
+
+## References
