Prof final comments

--- a/citation.bib
+++ b/citation.bib
@@ -360,7 +360,7 @@
   title={Global Outreach \& Financial. Performance Benchmark Report-2017-2018},
   author={Market, MIX},
   year={2019},
-  publisher={Recuperado de http://www. themix. org/mixmarket/publications/2014-global~…}
+  publisher={Retrieved from http://www. themix. org/mixmarket/publications/2014-global~…}
 }
 
 @article{pashkova2016business,
@@ -929,7 +929,7 @@
 
 @article{quayes2019probability,
   title={Probability of Sustainability and Social Outreach of Microfinance Institutions},
-  author={Quayes, Shakil and others},
+  author={Quayes, Shakil},
   journal={Economics Bulletin},
   volume={39},
   number={2},
@@ -999,4 +999,16 @@
   pages={101--112},
   year={2012}
 }
+
+@article{miller2011angel,
+  title={Angel agents: Agency theory reconsidered},
+  author={Miller, Danny and Sardais, Cyrille},
+  journal={Academy of Management Perspectives},
+  volume={25},
+  number={2},
+  pages={6--13},
+  year={2011},
+  publisher={Academy of Management Briarcliff Manor, NY}
+}
+
 
